# ai_agency

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml
samples/: devops_incident_mgmt.txt  ecommerce_marketplace.txt  freelancer_invoicing.txt  health_fitness_app.txt  saas_team_workspace.txt
src/ai_agency/: __init__.py  cli.py  config.py
src/ai_agency/generators/: competitor_analysis_generator.py  market_analysis_generator.py  pitch_deck_generator.py  prd_generator.py  roadmap_generator.py  stitch_prompt.py  viability_generator.py
src/ai_agency/integrations/: stitch.py
src/ai_agency/models/: __init__.py  competitor_analysis.py  market_analysis.py  pitch_deck.py  prd.py  roadmap.py  viability.py
src/ai_agency/providers/: __init__.py  anthropic.py  base.py  openai.py
src/ai_agency/templates/: competitor_analysis_system.py  market_analysis_system.py  pitch_deck_system.py  prd_system.py  roadmap_system.py  viability_system.py
src/ai_agency/web/: app.py
src/ai_agency/web/static/: app.js  style.css
src/ai_agency/web/templates/: index.html
tests/: test_generators.py  test_models.py  test_product_tools.py
